blocked downward slopes at intersections

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *.html
 __pycache__
-netlist*.json
 *.png
-routed*.json
+
+# Keeping these for easy reproduction
+#netlist*.json
+#routed*.json
+
+synth_*.v
